@@ -39,5 +39,6 @@ return [
         '37' => 'Problems parsing JSON',
         '38' => 'Date should be in the future',
         '39' => 'The sorting criteria is invalid',
+        '40' => 'Invalid query',
     ],
 ];
